# mail-cleaner

./: .bumpversion.cfg  .readthedocs.yaml  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  quickstart.rst
mail_cleaner/: __init__.py  mail.py  sanitizer.py  text.py
testapp/: settings.py
tests/: test_send_mail_plus.py
