# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = mail-cleaner
version = 0.1.0
description = Handle and sanitize HTML & text emails
long_description = file: README.rst
url = https://github.com/maykinmedia/mail-cleaner
project_urls =
    Documentation = http://mail-cleaner.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/mail-cleaner/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/mail-cleaner/issues
    Source Code = https://github.com/maykinmedia/mail-cleaner
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = django, email, sanitize
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
    lxml
tests_require =
    pytest
    pytest-django
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    mail_cleaner
    mail_cleaner.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=mail_cleaner
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
